# Chess

./: CMakeLists.txt  README.md  chessboard.cpp  chessboard.h  chesslogic.cpp  chesslogic.cpp.wigtKF  chesslogic.h  mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  chessboard.cpp  chessboard.h  chesslogic.cpp  chesslogic.h  mainwindow.cpp  mainwindow.ui
